--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 ---
 layout: default
 title: Home
+
 ---
 
 {% include navigation.html %}
 {% include home.html %}
 {% include news.html %}
 {% include about.html %}
+{% include events.html %}
+{% include contact.html %}
