--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: COSAS HUB
 
 {% include navigation.html %}
 {% include home.html %}
-{% include news.html %}
+<!-- {% include news.html %} -->
 {% include about.html %}
 {% include events.html %}
 {% include contact.html %}
