added the footer

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@ title: COSAS HUB
 {% include home.html %}
 <!-- {% include news.html %} -->
 {% include about.html %}
+{% include initiative.html %}
 {% include events.html %}
 {% include contact.html %}
+{% include footer.html %}
