--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ title: COSAS HUB
 {% include about.html %}
 {% include initiative.html %}
 {% include events.html %}
+{% include team.html %}
 {% include contact.html %}
 {% include footer.html %}
